// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFilters should display a component overridden by the filter 1`] = `
<div>
  <div>
    Overridden component
  </div>
</div>
`;

exports[`withFilters should display original component when no filters applied 1`] = `
<div>
  <div>
    My component
  </div>
</div>
`;

exports[`withFilters should display two components composed by the filter 1`] = `
<div>
  <div>
    <div>
      My component
    </div>
    <div>
      Composed component
    </div>
  </div>
</div>
`;

exports[`withFilters should not re-render component when new filter added before component was mounted 1`] = `
<div>
  <blockquote>
    <div>
      Spied component
    </div>
  </blockquote>
</div>
`;

exports[`withFilters should re-render both components once each when one filter added 1`] = `
<div>
  <section>
    <blockquote>
      <div>
        Spied component
      </div>
    </blockquote>
    <blockquote>
      <div>
        Spied component
      </div>
    </blockquote>
  </section>
</div>
`;

exports[`withFilters should re-render component once when new filter added after component was mounted 1`] = `
<div>
  <blockquote>
    <div>
      Spied component
    </div>
  </blockquote>
</div>
`;

exports[`withFilters should re-render component once when two filters added in the same animation frame 1`] = `
<div>
  <section>
    <blockquote>
      <div>
        Spied component
      </div>
    </blockquote>
  </section>
</div>
`;

exports[`withFilters should re-render component twice when new filter added and removed in two different animation frames 1`] = `
<div>
  <div>
    Spied component
  </div>
</div>
`;
